--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "node": "8.11.1"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
-    "@truffle/hdwallet-provider": "^2.0.0",
-    "apexcharts": "3.6.3",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -24,6 +23,7 @@
     "chai-bignumber": "3.0.0",
     "dotenv": "^8.6.0",
     "fs": "^0.0.1-security",
+    "hardhat-contract-sizer": "^2.6.1",
     "lodash": "4.17.20",
     "moment": "2.29.0",
     "openzeppelin-solidity": "2.1.3",
@@ -32,15 +32,11 @@
     "react-bootstrap": "1.3.0",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^5.0.1",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "reselect": "4.0.0",
-    "solidity-coverage": "0.7.10",
-    "truffle": "^5.1.45",
-    "truffle-flattener": "1.5.0",
-    "truffle-hdwallet-provider": "^1.0.17",
-    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "tsconfig-paths": "^4.1.0",
     "web3": "1.2.6"
   },
   "scripts": {
@@ -69,6 +65,9 @@
   },
   "bugs": {
     "url": "https://github.com/ILESKOV/LESKOVDEXV1/issues"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "hardhat": "^2.11.2"
   }
 }
-
